разработка структуры страницы

--- a/pages/c_widgets/order.html
+++ b/pages/c_widgets/order.html
@@ -2,14 +2,14 @@
 
 <div id="cw_OrderingStage" class="lc_OrderingStage">
    <div>
-      <p>Валюта</p>
+      <label for="selValuta">Валюта</label>
       <select id="selValuta">
          <option value="грн" selected>Гривна</option>
          <option value="руб">Рубль</option>
       </select>
    </div>
    <div>
-      <p>Ед.изм.</p>
+      <label for="selUnit">Ед.изм.</label>
       <select id="selUnit">
          <option value="мм" selected>мм</option>
          <option value="см">см</option>
@@ -18,15 +18,15 @@
       </select>
    </div>
    <section id="bl_SOParameter" class="lc_SOParameterL gc_ThinBorder">
-      <div id="b_SOParameter" class="lc_SOParameter">
-         <p>Размеры</p>
+      <h3>Размеры</h3>
+      <div id="b_SOParameter" class="lc_SOParameter gc_ThinBorder">
          <div>    <!-- Object Size -->
             <label id="lbl_OSize" for="rad_OSize"> Исходный объект </label>
             <label id="lbl_OWidth" for="txt_OWidth">высота</label>
-            <input id="txt_OWidth" type="text" size="10">
+            <input id="txt_OWidth" type="text" size="5">
             <output name="OWidthUnit" for="selUnit">мм</output>   <!-- Unit - единица измерения -->
             <label id="lbl_OHeight" for="txt_OHeight">ширина</label>
-            <input id="txt_OHeight" type="text" size="10">
+            <input id="txt_OHeight" type="text" size="5">
             <output name="OHeightUnit" for="selUnit">мм</output>
             <input id="rad_OSize" type="radio" name="Sizes" checked="checked" />
          </div>
@@ -34,10 +34,10 @@
          <div>    <!-- Window Size -->
             <label id="lbl_WSize" for="rad_WSize"> Окно </label>
             <label id="lbl_WWidth" for="txt_WWidth">высота</label>
-            <input id="txt_WWidth" type="text" size="10">
+            <input id="txt_WWidth" type="text" size="5">
             <output name="WWidthUnit" for="selUnit">мм</output>
             <label id="lbl_WHeight" for="txt_WHeight">ширина</label>
-            <input id="txt_WHeight" type="text" size="10">
+            <input id="txt_WHeight" type="text" size="5">
             <output name="WHeightUnit" for="selUnit">мм</output>
             <input id="rad_WSize" type="radio" name="Sizes" />
          </div>
@@ -45,10 +45,10 @@
          <div>    <!-- Product Size -->
             <label id="lbl_PSize"  for="rad_PSize"> Готовое изделие </label>
             <label id="lbl_PWidth" for="txt_PWidth">высота</label>
-            <input id="txt_PWidth" type="text" size="10">
+            <input id="txt_PWidth" type="text" size="5">
             <output name="PWidthUnit" for="selUnit">мм</output>
             <label id="lbl_PHeight" for="txt_PHeight">ширина</label>
-            <input id="txt_PHeight" type="text" size="10">
+            <input id="txt_PHeight" type="text" size="5">
             <output name="PHeightUnit" for="selUnit">мм</output>
             <input id="rad_PSize" type="radio" name="Sizes" />
          </div>
