разработка структуры страницы

--- a/pages/c_widgets/cw_OrderingStage.html
+++ b/pages/c_widgets/cw_OrderingStage.html
@@ -56,5 +56,17 @@
       </div>
    </section>
 
-   <section id="bl_ProductOptions" class="lc_ProductOptionsL gc_ThinBorder"></section>
+   <section id="bl_ProductOptions" class="lc_ProductOptionsL gc_ThinBorder">
+      <div id="b_DecorationTemplate" class="lc_DecorationTemplate gc_ThinBorder" >
+         <label for="selDecorationTemplate">Шаблоны</label>
+         <select id="selDecorationTemplate">
+            <option value="tml_0" selected>Без использования шаблона</option>
+            <optgroup label="Комплекты">
+               <option value="tml_1">под вышивку</option>
+               <option value="tml_2">под фоторамку</option>
+               <option value="tml_3">для картины</option>
+            </optgroup>
+         </select>
+      </div>
+   </section>
 </div>
