--- a/pages/c_widgets/cw_OrderingStage.html
+++ b/pages/c_widgets/cw_OrderingStage.html
@@ -1,14 +1,14 @@
 <meta charset="UTF-8">
 
 <div id="cw_OrderingStage" class="lc_OrderingStage">
-   <div>
+   <div class="gc_ThinBorder">
       <label for="selValuta">Валюта</label>
       <select id="selValuta">
          <option value="грн" selected>Гривна</option>
          <option value="руб">Рубль</option>
       </select>
    </div>
-   <div>
+   <div class="gc_ThinBorder">
       <label for="selUnit">Ед.изм.</label>
       <select id="selUnit">
          <option value="мм" selected>мм</option>
@@ -18,7 +18,7 @@
       </select>
    </div>
    <section id="bl_SOParameter" class="lc_SOParameterL gc_ThinBorder">
-      <h3>Размеры</h3>
+      <h3 class="gc_ThinBorder">Размеры</h3>
       <div id="b_SOParameter" class="lc_SOParameter gc_ThinBorder">
          <div>    <!-- Object Size -->
             <label id="lbl_OSize" for="rad_OSize"> Исходный объект </label>
