--- a/pages/c_widgets/cw_OrderingStage.html
+++ b/pages/c_widgets/cw_OrderingStage.html
@@ -1,14 +1,14 @@
 <meta charset="UTF-8">
 
 <div id="cw_OrderingStage" class="lc_OrderingStage">
-   <div class="gc_ThinBorder">
+   <fieldset>
       <label for="selValuta">Валюта</label>
       <select id="selValuta">
          <option value="грн" selected>Гривна</option>
          <option value="руб">Рубль</option>
       </select>
-   </div>
-   <div class="gc_ThinBorder">
+   </fieldset>
+   <fieldset>
       <label for="selUnit">Ед.изм.</label>
       <select id="selUnit">
          <option value="мм" selected>мм</option>
@@ -16,10 +16,10 @@
          <option value="дм">дм</option>
          <option value="м">м</option>
       </select>
-   </div>
+   </fieldset>
    <section id="bl_SOParameter" class="lc_SOParameterL gc_ThinBorder">
       <h3 class="gc_ThinBorder">Размеры</h3>
-      <div id="b_SOParameter" class="lc_SOParameter gc_ThinBorder">
+      <fieldset id="b_SOParameter" class="lc_SOParameter">
          <div>    <!-- Object Size -->
             <label id="lbl_OSize" for="rad_OSize"> Исходный объект </label>
             <label id="lbl_OWidth" for="txt_OWidth">высота</label>
@@ -30,7 +30,6 @@
             <output name="OHeightUnit" for="selUnit">мм</output>
             <input id="rad_OSize" type="radio" name="Sizes" checked="checked" />
          </div>
-
          <div>    <!-- Window Size -->
             <label id="lbl_WSize" for="rad_WSize"> Окно </label>
             <label id="lbl_WWidth" for="txt_WWidth">высота</label>
@@ -41,7 +40,6 @@
             <output name="WHeightUnit" for="selUnit">мм</output>
             <input id="rad_WSize" type="radio" name="Sizes" />
          </div>
-
          <div>    <!-- Product Size -->
             <label id="lbl_PSize"  for="rad_PSize"> Готовое изделие </label>
             <label id="lbl_PWidth" for="txt_PWidth">высота</label>
@@ -52,12 +50,11 @@
             <output name="PHeightUnit" for="selUnit">мм</output>
             <input id="rad_PSize" type="radio" name="Sizes" />
          </div>
-
-      </div>
+      </fieldset>
    </section>
 
    <section id="bl_ProductOptions" class="lc_ProductOptionsL gc_ThinBorder">
-      <div id="b_DecorationTemplate" class="lc_DecorationTemplate gc_ThinBorder" >
+      <fieldset id="b_DecorationTemplate" class="lc_DecorationTemplate" >
          <label for="selDecorationTemplate">Шаблоны</label>
          <select id="selDecorationTemplate">
             <option value="tml_0" selected>Без использования шаблона</option>
@@ -67,6 +64,6 @@
                <option value="tml_3">для картины</option>
             </optgroup>
          </select>
-      </div>
+      </fieldset>
    </section>
 </div>
