--- a/pages/blocks/b_FrameSelect.html
+++ b/pages/blocks/b_FrameSelect.html
@@ -68,9 +68,6 @@
       <!-- Список доступных профилей багета.
            Оформить в виде отдельного подблоки и загружать динамически. При этом обработчик загрузки содержимого необходимо
            размещать в файле скрипта самого подблока, а не в файле скрипта обработчика данного блока -->
-      <ul id="b_FrameList" class="lc_FrameList">
-         <!-- структура пункта списка для генерации из JSON (заменяется в результате генерации) -->
-         <li><img src='img/profile-1.svg'/><p>sdfsdfs</p><span>ывапв</span></li>
-      </ul>
+      <div id="b_FrameList" class="lc_FrameList gc_ThinBorder"></div>
    </section>
 </div>
