разработка структуры страницы

--- a/pages/blocks/b_PaspSelect.html
+++ b/pages/blocks/b_PaspSelect.html
@@ -47,12 +47,15 @@
       </div>
    </section>
    <section id="bl_PaspList">
-      <!-- Список доступных профилей багета с возможностью сортировки.
+      <!-- Список доступных паспарту с возможностью сортировки.
             Оформить в виде отдельного подблоки и загружать динамически. При этом обработчик загрузки содержимого необходимо
             размещать в файле скрипта самого подблока, а не в файле скрипта обработчика данного блока -->
       <div id="b_PaspList" class="lc_PaspList gc_ThinBorder"></div>
    </section>
    <section id="bl_PaspSheets">
-
+      <!-- Список необходимых слоёв паспарту.
+           Оформить в виде отдельного подблоки и загружать динамически. При этом обработчик загрузки содержимого необходимо
+           размещать в файле скрипта самого подблока, а не в файле скрипта обработчика данного блока -->
+      <div id="b_PaspSheets" class="lc_PaspSheets gc_ThinBorder"></div>
    </section>
 </div>
