разработка структуры страницы

--- a/pages/blocks/b_PaspSelect.html
+++ b/pages/blocks/b_PaspSelect.html
@@ -52,10 +52,20 @@
             размещать в файле скрипта самого подблока, а не в файле скрипта обработчика данного блока -->
       <div id="b_PaspList" class="lc_PaspList gc_ThinBorder"></div>
    </section>
-   <section id="bl_PaspSheets">
+   <section id="bl_PaspSheets" class="container">
       <!-- Список необходимых слоёв паспарту.
            Оформить в виде отдельного подблоки и загружать динамически. При этом обработчик загрузки содержимого необходимо
            размещать в файле скрипта самого подблока, а не в файле скрипта обработчика данного блока -->
-      <div id="b_PaspSheets" class="lc_PaspSheets gc_ThinBorder"></div>
+      <!-- <div id="b_PaspSheets" class="lc_PaspSheets gc_ThinBorder"></div> -->
+      <div class="dropdown">
+         <label>Слои багета</label>
+         <div>
+            <ul>
+               <li><a href="index.html">My Account</a></li>
+               <li><a href="index.html">Billing Settings</a></li>
+               <li><a href="index.html">Notifications</a></li>
+            </ul>
+         </div>
+      </div>
    </section>
 </div>
