--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-   <meta charset="UTF-8">
+   <meta charset="UTF-8" />
    <title>Модуль приёма заказов</title>
    <link rel="stylesheet" type="text/css" href="css/layout.css">
    <script src="js/init.js"></script>
