--- a/pages/c_widgets/cw_OrderingStage.html
+++ b/pages/c_widgets/cw_OrderingStage.html
@@ -1,22 +1,24 @@
 <meta charset="UTF-8">
 
 <div id="cw_OrderingStage" class="lc_OrderingStage">
-   <fieldset>
-      <label for="selValuta">Валюта</label>
-      <select id="selValuta">
-         <option value="грн" selected>Гривна</option>
-         <option value="руб">Рубль</option>
-      </select>
-   </fieldset>
-   <fieldset>
-      <label for="selUnit">Ед.изм.</label>
-      <select id="selUnit">
-         <option value="мм" selected>мм</option>
-         <option value="см">см</option>
-         <option value="дм">дм</option>
-         <option value="м">м</option>
-      </select>
-   </fieldset>
+   <section id="l_SelectMeasurement">
+      <fieldset>
+         <label for="selValuta">Валюта</label>
+         <select id="selValuta">
+            <option value="грн" selected>Гривна</option>
+            <option value="руб">Рубль</option>
+         </select>
+      </fieldset>
+      <fieldset>
+         <label for="selUnit">Ед.изм.</label>
+         <select id="selUnit">
+            <option value="мм" selected>мм</option>
+            <option value="см">см</option>
+            <option value="дм">дм</option>
+            <option value="м">м</option>
+         </select>
+      </fieldset>
+   </section>
    <section id="bl_SOParameter" class="lc_SOParameterL gc_ThinBorder">
       <h3 class="gc_ThinBorder">Размеры</h3>
       <fieldset id="b_SOParameter" class="lc_SOParameter">
