разработка структуры страницы

--- a/pages/c_widgets/cw_OrderingStage.html
+++ b/pages/c_widgets/cw_OrderingStage.html
@@ -20,8 +20,8 @@
       </fieldset>
    </section>
    <section id="bl_SOParameter" class="lc_SOParameterL gc_ThinBorder">
-      <h3 class="gc_ThinBorder">Размеры</h3>       <!-- заменить на заголовок (легенду - <legend>) для тега fieldset-->
       <fieldset id="b_SOParameter" class="lc_SOParameter">
+         <legend class="gc_ThinBorder">Размеры</legend>
          <div>    <!-- Object Size -->
             <label id="lbl_OSize" for="rad_OSize">Исходный объект</label>
             <label id="lbl_OWidth" for="txt_OWidth">высота</label>
